being able to do /me, need session next

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,6 @@
-@()
+@(userInfo: String)
 
 @main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+  <h1>You are authenticated!</h1>
+  <p>@userInfo</p>
 }
