Tokens are handled in the api client, should be better

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,11 +12,11 @@
         <!-- Add a container and a row, then add a section and button inside the row -->
       <div class="container">
         <div class="row">
-          <section class="col-md-12">
+          <section class="col-md-12 main-section">
             @userInfo
             @playlists
           </section>
-          <button class="btn btn-primary col-md-12">Click me!</button>
+          <button class="btn btn-primary col-md-12" id="playlist">Click me!</button>
         </div>
       </div>
     </body>
