--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,8 @@
 .track-container {
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(20, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(25, 1fr);
     height: 500vh;
     width: 100vw;
     grid-column-gap: 1px;
@@ -11,11 +11,28 @@
 
 .track {
     border: 1px solid black;
-    background-color: rgba(155,15,15, 0.3);
-    overflow: hidden;
-    text-overflow: ellipsis;
+    background: radial-gradient(rgba(200,100,255, 0.3), rgba(255,155,255,0.7));
     white-space: normal;
     word-break: break-all;
+    text-align: center;
+}
+
+.track > .track-info {
+    height: 15vh;
+}
+
+.track-features > ul {
+    list-style-type: none;
+}
+
+.track-features .feature {
+    display:inline-block;
+    width: 10vw;
+}
+
+.track-features .feature-value {
+    display:inline-block;
+    width: 10vw;
 }
 
 .track-title {
