--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,6 +15,10 @@
     white-space: normal;
     word-break: break-all;
     text-align: center;
+    box-shadow:
+        inset 0 -3em 3em rgb(255 0 0 / 30%),
+        0 0 0 2px white,
+        0.3em 0.3em 1em rgb(200 0 0 / 60%);
 }
 
 .track > .track-info {
@@ -41,4 +45,11 @@
 
 .track-artists {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+@media (max-width: 70em) {
+  .track-container {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(50, 1fr);
+  }
 }
